--- a/redirect.html
+++ b/redirect.html
@@ -9,7 +9,7 @@
   <body>
     <script>
       const p = document.createElement('h2');
-      p.append('Signed in. Copy and paste this into the popup in Obsidian:');
+      p.append('Signed in. Copy and paste this into the popup in @web:');
 
       const pre = document.createElement('pre');
       pre.append(document.location.hash.slice(1));
